WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
194310
CoreAudioCaptureSource should not configure its audio unit until it starts producing data
https://bugs.webkit.org/show_bug.cgi?id=194310
Summary
CoreAudioCaptureSource should not configure its audio unit until it starts pr...
youenn fablet
Reported
2019-02-05 15:18:26 PST
CoreAudioCaptureSource should not configure its audio unit until it starts producing data
Attachments
Patch
(3.14 KB, patch)
2019-02-05 15:26 PST
,
youenn fablet
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
youenn fablet
Comment 1
2019-02-05 15:26:42 PST
Created
attachment 361227
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2019-02-05 15:27:30 PST
<
rdar://problem/47833940
>
WebKit Commit Bot
Comment 3
2019-02-06 08:59:46 PST
Comment on
attachment 361227
[details]
Patch Clearing flags on attachment: 361227 Committed
r241022
: <
https://trac.webkit.org/changeset/241022
>
WebKit Commit Bot
Comment 4
2019-02-06 08:59:48 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug