Cherry-pick r241022. rdar://problem/47893580

CoreAudioCaptureSource should not configure its audio unit until it starts producing data
    https://bugs.webkit.org/show_bug.cgi?id=194310

    Reviewed by Eric Carlson.

    Delay the configuration of the audio unit until the source is instructed to start producing data.
    This allows the UIProcess to not start changing the audio unit when
    checking for constraints during getUserMedia call before the prompt.
    Covered by manual testing.

    * platform/mediastream/mac/CoreAudioCaptureSource.cpp:
    (WebCore::CoreAudioCaptureSource::CoreAudioCaptureSource):
    (WebCore::CoreAudioCaptureSource::initializeToStartProducingData):
    (WebCore::CoreAudioCaptureSource::startProducingData):
    * platform/mediastream/mac/CoreAudioCaptureSource.h:

    Canonical link: https://commits.webkit.org/208780@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@241022 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/207701.238@safari-607-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-607-branch@241157 268f45cc-cd09-0410-ab3c-d52691b4dbfc